client/src/css/app.sass
// app global css in Sass form

.alert
    background-color: #eee
    border-radius: 4px
    margin: 16px 0
    padding: 16px 16px 16px 16px
    font-size: 1em
    border-width: 0 5px
    border-style: solid
    border-color: #9e9e9e
    letter-spacing: 0.5px
    .alert-title
        margin: -16px -16px 16px -16px
        padding: 4px 8px
        font-weight: bold
        border-bottom: 1px solid

.alert-tip
    background-color: #c1e0f4
    border-color: #2156ba

    .alert-title
        font-weight: bold
        border-color: #2156ba

.alert-success
    background-color: #c1f4c5
    border-color: #2eba21

    .alert-title
        font-weight: bold
        border-color: #2eba21
fieldset
    border: none

.q-item.q-router-link--active,
.q-item--active
    color: #000
    background-color: #bbdefb

